dark mode bug fix

--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@
     border: 1px solid var(--clr-light);
 }
 
-.border {
+.borderStyling {
     border: 5px solid var(--clr-border) !important;
 }
 
